--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn
 idna==3.4
 itsdangerous==2.1.2
 jellyfish==0.11.2
